--- a/src/app/products/pages/add/add.component.html
+++ b/src/app/products/pages/add/add.component.html
@@ -9,7 +9,12 @@
             <input type="text" class="form-control" formControlName="name">
         </div>
         <div class="col-auto">
-            <span class="form-text" *ngIf="myForm.get('name')?.invalid" [message]="text1" [color]="color1" message="This input is required**" errorMsg></span>
+            <span class="form-text" 
+            [valid]="!error('name')" 
+            [message]="text1" 
+            [color]="color1" 
+            message="This input is required**" 
+            errorMsg></span>
         </div>
 
         <div class="row mt-3">
